--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Manhattan Nairobi - Bar, Restaurant & Nightclub</title>
+    <title>The Manhattan Nairobi - The Music and Culture Capital of Nairobi</title>
     <link rel="stylesheet" href="styles.css"/>
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/5eafb43833.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -28,7 +30,7 @@
         </nav>
         <div class="hero-section">
             <h1>Experience Nairobi's Premier Nightlife & Dining</h1>
-            <p>Bar, Restaurant & Nightclub</p>
+            <p>The Music and Culture Capital of Nairobi</p>
             <a href="#reservations" class="btn">Make a Reservation</a>
         </div>
     </header>
@@ -137,15 +139,15 @@
             <div class="container">
                 <h2>Contact Us</h2>
                 <div class="contact-info">
-                    <p><i class="fas fa-map-marker-alt"></i> Location: [Your Street Address], [Your Area], Nairobi, Kenya</p>
-                    <p><i class="fas fa-phone"></i> Phone: <a href="tel:+2547XXXXXXXX">+254 7XX XXX XXX</a></p>
-                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@themanhattan.co.ke">info@themanhattan.co.ke</a></p>
+                    <p><i class="fas fa-map-marker-alt"></i> Location: First Floor,Imaara Mall Nairobi, Kenya</p>
+                    <p><i class="fas fa-phone"></i> Phone: <a href="tel:+254757309894">+254 757309894</a></p>
+                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:imaara@manhattan.co.ke">imaara@manhattan.co.ke</a></p>
                     <p><i class="fas fa-clock"></i> Hours: Mon - Thu: 5 PM - 2 AM | Fri - Sat: 5 PM - 5 AM | Sun: 6 PM - 1 AM</p>
                 </div>
                 <div class="social-media-links">
-                    <a href="https://facebook.com/themanhattan" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://instagram.com/themanhattan_nairobi" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/themanhattan_ke" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/share/1HunGgAHMb/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/themanhattanke?igsh=MW5vZnE1czIzeWozYQ==" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@themanhattanke?_t=ZM-8y60diFSuaU&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
                 </div>
                 <div class="map-container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.247293526154!2d36.81722295!3d-1.29206595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d0b6b%3A0xf6399e5a1b0d2d3!2sNairobi!5e0!3m2!1sen!2ske!4v1700000000000!5m2!1sen!2ske" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -160,7 +162,5 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/your-font-awesome-kit-code.js" crossorigin="anonymous"></script>
 </body>
 </html>
