spelling errors corrected

--- a/drinks-menu.html
+++ b/drinks-menu.html
@@ -41,7 +41,7 @@
                 <h2>Cocktail Menu</h2>
 
                 <div class="search-bar-container">
-                    <input type="text" id="drinkSearch" placeholder="Your drink, one search away" onkeyup="filterDrinks()">
+                    <input type="text" id="drinkSearch" placeholder="Your favorite drink, one search away" onkeyup="filterDrinks()">
                 </div>
                 <div class="menu-section">
                     <h3>Signature Cocktails</h3>
