--- a/drinks-menu.html
+++ b/drinks-menu.html
@@ -41,19 +41,18 @@
                 <h2>Cocktail Menu</h2>
 
                 <div class="search-bar-container">
-                    <!-- Call filterDrinks from global script.js -->
                     <input type="text" id="drinkSearch" placeholder="Your favorite drink, one search away" onkeyup="filterDrinks()">
                 </div>
                 <div class="menu-section">
                     <h3>Signature Cocktails</h3>
                     <ul id="signature-cocktails-list">
-                        <li><strong>Earthquake</strong> - Vodka Gin Rum Tequila Guinness Cordial <span class="price">Ksh 1000</span></li>
-                        <li><strong>Gin Cooler</strong> - Gin Cucumber Tonic <span class="price">Ksh 800</span></li>
+                        <li><strong>Earthquake</strong> - Vodka, Gin, Rum, Tequila, Guinness, Cordial <span class="price">Ksh 1000</span></li>
+                        <li><strong>Gin Cooler</strong> - Gin, Cucumber, Tonic <span class="price">Ksh 800</span></li>
                         <li><strong>Glenova</strong> - Bourbon, Martini Rosso, A Dissaronno <span class="price">Ksh 900</span></li>
                         <li><strong>Ketel One Premende</strong> - Vodka, Hibiscus and Tamarind Syrup, Lemonade <span class="price">Ksh 800</span></li>
                         <li><strong>Nairobi Slide</strong> - Vodka, Berry Syrup, Lime <span class="price">Ksh 800</span></li>
-                        <li><strong>Paloma</strong> - Don Julio Agave Syrup, Lime Dry Ice <span class="price">Ksh 1000</span></li>
-                        <li><strong>Shirley Ginger</strong> - Rum Rosemary and Ginger Cordial, Ginger Ale <span class="price">Ksh 800</span></li>
+                        <li><strong>Paloma</strong> - Don Julio Agave Syrup, Lime, Dry Ice <span class="price">Ksh 1000</span></li>
+                        <li><strong>Shirley Ginger</strong> - Rum, Rosemary and Ginger Cordial, Ginger Ale <span class="price">Ksh 800</span></li>
                         <li><strong>Sundowner</strong> - Gin, Passion and Mint Syrup, Ginger Ale <span class="price">Ksh 800</span></li>
                         <li><strong>Tiki Vibez</strong> - Gin, Guava Earl Gray Syrup Ginger Ale <span class="price">Ksh 800</span></li>
                         <li><strong>Whisky highball</strong> - Whisky, Basil, Sage, Apple Juice <span class="price">Ksh 800</span></li>
@@ -63,17 +62,17 @@
                 <div class="menu-section">
                     <h3>Classic Cocktails</h3>
                     <ul id="classic-cocktails-list">
-                        <li><strong>Adios MF</strong> - Gin Vodka Tequila Rum Glue Cupado Tonic <span class="price">Ksh 1050</span></li>
-                        <li><strong>Cosmopolitan</strong> - Vodka Cranberry Lime <span class="price">Ksh 800</span></li>
-                        <li><strong>Long Island</strong> - Gin Vodka Tequila Rum Coke <span class="price">Ksh 1000</span></li>
-                        <li><strong>Manhattan Special</strong> - Whisky Vermouth Ornage Juice <span class="price">Ksh 800</span></li>
-                        <li><strong>Margarita</strong> - Tequila Lime Pineapple Sec <span class="price">Ksh 700</span></li>
-                        <li><strong>Mojito</strong> - Rum Mint Tonic <span class="price">Ksh 700</span></li>
-                        <li><strong>Negroni</strong> - Gin Campari Martini Rosso <span class="price">Ksh 700</span></li>
-                        <li><strong>OldFashion</strong> - Bourbon Sugar Bitter <span class="price">Ksh 1000</span></li>
-                        <li><strong>Pinacolada</strong> - Rum Coconut Milk Pineapple Juice Lime <span class="price">Ksh 850</span></li>
-                        <li><strong>Tequilla Sunrise</strong> - Tequila Orange Juice Grenadine <span class="price">Ksh 700</span></li>
-                        <li><strong>Whisky Sour</strong> - Whisky Lime Optional Aquafaba / Eggwhite <span class="price">Ksh 800</span></li>
+                        <li><strong>Adios MF</strong> - Gin, Vodka, Tequila, Rum, Glue Cupado Tonic <span class="price">Ksh 1050</span></li>
+                        <li><strong>Cosmopolitan</strong> - Vodka, Cranberry, Lime <span class="price">Ksh 800</span></li>
+                        <li><strong>Long Island</strong> - Gin, Vodka, Tequila, Rum, Coke <span class="price">Ksh 1000</span></li>
+                        <li><strong>Manhattan Special</strong> - Whisky, Vermouth Orange Juice <span class="price">Ksh 800</span></li>
+                        <li><strong>Margarita</strong> - Tequila, Lime, Pineapple Sec <span class="price">Ksh 700</span></li>
+                        <li><strong>Mojito</strong> - Rum, Mint, Tonic <span class="price">Ksh 700</span></li>
+                        <li><strong>Negroni</strong> - Gin, Campari, Martini Rosso <span class="price">Ksh 700</span></li>
+                        <li><strong>OldFashion</strong> - Bourbon, Sugar Bitter <span class="price">Ksh 1000</span></li>
+                        <li><strong>Pinacolada</strong> - Rum, Coconut Milk, Pineapple Juice, Lime <span class="price">Ksh 850</span></li>
+                        <li><strong>Tequilla Sunrise</strong> - Tequila, Orange Juice, Grenadine <span class="price">Ksh 700</span></li>
+                        <li><strong>Whisky Sour</strong> - Whisky, Lime, Optional Aquafaba / Eggwhite <span class="price">Ksh 800</span></li>
                     </ul>
                 </div>
 
