--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p>Mondays don't have to be boring, unwind with good music, chilled drinks, and smooth vibes to start your week right.</p>
                     </div>
                     <div class="event-item">
-                        <img src="https://placehold.co/400x250/957DAD/FFFFFF?text=Cocktail+Workshop" alt="Cocktail Workshop Event" class="img-responsive">
+                        <img src="https://placehold.co/400x250/957DAD/FFFFFF?text=Reggae+Nights" alt="Reggae Nights" class="img-responsive">
                         <h3>Dohty Family Reggae</h3>
                         <p class="event-date"><i class="far fa-calendar-alt"></i> July, 29th</p>
                         <p>Hosted by Manduve, Brian, and Gasoh</p>
