--- a/events-calendar.html
+++ b/events-calendar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Calendar - The Manhattan Nairobi</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="events.css">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/5eafb43833.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
