--- a/events-calendar.html
+++ b/events-calendar.html
@@ -37,39 +37,28 @@
     </header>
 
     <main>
-        <section id="events-calendar-details" class="section-padded">
+        <section id="events-calendar-details" class="section-padded section-dark">
             <div class="container">
-                <h2>Full Events Schedule</h2>
-
-                <div class="event-month">
-                    <h3>July 2025</h3>
-                    <div class="event-list">
-                        <div class="event-item-full">
-                            <h4>Live Jazz Night with "The Nairobi Groovers"</h4>
-                            <p class="event-date"><i class="far fa-calendar-alt"></i> Friday, July 4th, 7:00 PM - 10:00 PM</p>
-                            <p>Kick off your weekend with smooth jazz and signature cocktails. Featuring Nairobi's finest jazz ensemble.</p>
-                        </div>
-                        <div class="event-item-full">
-                            <h4>Whisky Tasting Experience</h4>
-                            <p class="event-date"><i class="far fa-calendar-alt"></i> Saturday, July 12th, 6:00 PM - 8:00 PM</p>
-                            <p>Explore a curated selection of premium whiskies from around the world. Limited spots available, reservation required.</p>
-                        </div>
-                        <div class="event-item-full">
-                            <h4>Latin Dance Night</h4>
-                            <p class="event-date"><i class="far fa-calendar-alt"></i> Thursday, July 17th, 8:00 PM onwards</p>
-                            <p>Salsa, Bachata, and Merengue! Join us for a vibrant night of Latin rhythms. Beginners welcome!</p>
-                        </div>
-                        <div class="event-item-full">
-                            <h4>Karaoke Night</h4>
-                            <p class="event-date"><i class="far fa-calendar-alt"></i> Wednesday, July 23rd, 7:30 PM onwards</p>
-                            <p>Unleash your inner rockstar! Grab the mic and sing your favorite tunes.</p>
-                        </div>
-                    </div>
-                </div>
+                <h2 class="text-center">Full Events Schedule</h2>
 
                 <div class="event-month">
                     <h3>August 2025</h3>
                     <div class="event-list">
+                        <div class="event-item-full">
+                            <h4>Whisky Tasting Experience</h4>
+                            <p class="event-date"><i class="far fa-calendar-alt"></i> Saturday, August 12th, 6:00 PM - 8:00 PM</p>
+                            <p>Explore a curated selection of premium whiskies from around the world. Limited spots available, reservation required.</p>
+                        </div>
+                        <div class="event-item-full">
+                            <h4>Latin Dance Night</h4>
+                            <p class="event-date"><i class="far fa-calendar-alt"></i> Thursday, August 17th, 8:00 PM onwards</p>
+                            <p>Salsa, Bachata, and Merengue! Join us for a vibrant night of Latin rhythms. Beginners welcome!</p>
+                        </div>
+                        <div class="event-item-full">
+                            <h4>Karaoke Night</h4>
+                            <p class="event-date"><i class="far fa-calendar-alt"></i> Wednesday, August 23rd, 7:30 PM onwards</p>
+                            <p>Unleash your inner rockstar! Grab the mic and sing your favorite tunes.</p>
+                        </div>
                         <div class="event-item-full">
                             <h4>Acoustic Sunset Sessions</h4>
                             <p class="event-date"><i class="far fa-calendar-alt"></i> Every Sunday, 5:00 PM - 7:00 PM</p>
