--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                 <div class="event-preview">
                     <div class="event-item">
                         <img src="https://placehold.co/400x250/E0BBE4/FFFFFF?text=Live+Music" alt="Live Music Event" class="img-responsive">
-                        <h3>Monday Blues</h3>
-                        <p class="event-date"><i class="far fa-calendar-alt"></i>July, 28th</p>
-                        <p>Hosted by DJ Teff, and Pakie</p>
-                        <p>Mondays don't have to be boring, unwind with good music, chilled drinks, and smooth vibes to start your week right.</p>
+                        <h3>Cocktail Night</h3>
+                        <p class="event-date"><i class="far fa-calendar-alt"></i>July, 31st</p>
+                        <p>Hosted by <a href="https://www.instagram.com/jamalcarl7?igsh=bjcwcWFzMTgyc3g3">@jamalcarl7</a> and <a href="https://www.instagram.com/maryanne_mamagg">@maryanne_mamagg</a></p>
+                        <p>Join us this Thursday for a night of exquisite cocktails and live music.</p>
                     </div>
                     <div class="event-item">
                         <img src="https://placehold.co/400x250/957DAD/FFFFFF?text=Reggae+Nights" alt="Reggae Nights" class="img-responsive">
-                        <h3>Dohty Family Reggae</h3>
-                        <p class="event-date"><i class="far fa-calendar-alt"></i> July, 29th</p>
-                        <p>Hosted by Manduve, Brian, and Gasoh</p>
+                        <h3>Unfiltered Fridays</h3>
+                        <p class="event-date"><i class="far fa-calendar-alt"></i> August, 1st</p>
+                        <p>Hosted by <a href="https://www.instagram.com/mr_georgetailor">@mr_georgetailor</a> and <a href="https://www.instagram.com/venrick_kenya">@venrick_kenya</a></p>
                         <p>Get ready for an unfforgettable night with Kriss Darlin and the full Dohty Family Crew</p>
                     </div>
                 </div>
